pensionmf/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pension-backend
  labels:
    app: pension-backend
    type: backend
spec:
  selector:
    matchLabels:
      app: pension-backend
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pension-backend
        type: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode1
      imagePullSecrets:
       - name: regcred
      containers:
        - name: pension-backend
          image: 192.168.2.19:5000/pension:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"
            limits:
              memory: "4Gi"
              cpu: "3"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 8083
              protocol: TCP
          imagePullPolicy: Always
