pensionmf/servicePension.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pension
spec:
  selector:
    app: pension-backend
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      name: http-backend
